# liba-back

./: Cargo.toml  Readme.md  build-and-run.sh  liba-back.service  main.tf  remote-create-liba-service.sh  remote-deploy-dist-folder.sh  remote-setup.sh  terraform.tfstate  terraform.tfstate.backup  user-data.sh
back/: .gitignore  Cargo.toml  vapid_public_key.txt
back/src/: db.rs  file_server.rs  main.rs
front/: .gitignore  elm.json  main.js  tsconfig.json
front/src/: Main.elm
front/static/: debug.js  index.html  js.js  serviceWorker.js
src/: main.rs
