[package]
name = "liba-back"
version = "0.1.0"
edition = "2024"

[dependencies]
web-push = {version = "0.11.0", features = ["hyper-client"], default-features = false}
tokio = {version = "1", features = ["macros", "rt-multi-thread"]}
serde_json = "1.0.149"
hyper = { version = "*", features = ["server", "client"] }
futures = "0.3.32"
log = "0.4"
