[package]
name = "liba-back"
version = "0.1.0"
edition = "2024"

[dependencies]
web-push = {version = "0.11.0", features = ["hyper-client"], default-features = false}
tokio = {version = "1", features = ["macros", "rt-multi-thread"]}
serde_json = "1.0.149"
futures = "0.3.32"
log = "0.4"
axum = {version = "0.8.9", features = ["macros"]}
env_logger = {version = "0.11.10", default-features = false}
rmp-serde = "1.3.1"
chrono = "0.4.45"

tower-http = {version = "*", features = ["fs"]} # Using wildcard here, because axum already depends on this
serde = "*"
tower-service = "*" # Using wildcard here, because axum already depends on this

[dev-dependencies]
tempfile = "=3.27.0" # Using exact match because that has been audited: https://lib.rs/crates/tempfile/audit
